# axiom

./: .gitignore  .travis.yml  Cargo.toml  README.md  RELEASE_NOTES.md
examples/: dining_philosophers.rs  goatherd.rs  hello_world.rs  montecarlo.rs  philosophers.rs
scrap/: scrap.rs
src/: actor_system.rs  actors.rs  cluster.rs  cluster_mgr.rs  executor.rs  lib.rs  mailbox.rs  message.rs  mtcrb.rs  nbcc.rs  pooled_queue.rs  prelude.rs  run_queue.rs  scheduler.rs  secc.rs  system.rs  tcp_cluster.rs
src/executor/: thread_pool.rs
src/scheduling/: executor.rs  mod.rs
src/scheduling/schedulers/: legacy.rs  mod.rs
src/system/: system_actor.rs
