# Cargo configuration for Axiom

[package]
name = "axiom"
version = "0.0.4"
edition = "2018"
authors = ["Robert Simmons Jr. MSc."]
license = "Apache-2.0"
homepage = "https://github.com/rsimmonsjr/axiom"
repository = "https://github.com/rsimmonsjr/axiom"
documentation = "https://docs.rs/axiom"
readme = "README.md"
description = """
Implements a highly-scalable and ergonomic actor system for Rust based on the 
best of Erlang / Elixir and Akka.
"""

keywords = [
    "Actor", 
	"Actors", 
	"Akka", 
	"Erlang", 
	"Elixir"
]

categories = [
    "asynchronous",
    "concurrency"
]

exclude = [
    "/.gitignore",
    "/.git",
    "/.github",
    "/.travis.yml",
]

[badges]
travis-ci = {repository = "rsimmonsjr/axiom" }
is-it-maintained-issue-resolution = {repository = "rsimmonsjr/axiom" }
is-it-maintained-open-issues  = {repository = "rsimmonsjr/axiom" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
env_logger = "0.6.2"

[dependencies]
uuid = "0.7.4"
log ="0.4"

[features]
default = ["uuid/v4"]

