# Cargo configuration for Axiom

[package]
name = "axiom"
version = "0.0.6"
edition = "2018"
authors = ["Robert Simmons Jr. MSc."]
license = "Apache-2.0"
homepage = "https://github.com/rsimmonsjr/axiom"
repository = "https://github.com/rsimmonsjr/axiom"
documentation = "https://docs.rs/axiom"
readme = "README.md"
description = """
Implements a highly-scalable and ergonomic actor system for Rust based on the 
best of Erlang / Elixir and Akka.
"""

keywords = [
    "Actor", 
	"Actors", 
	"Akka", 
	"Erlang", 
	"Elixir"
]

categories = [
    "asynchronous",
    "concurrency"
]

exclude = [
    "/.gitignore",
    "/.git",
    "/.github",
    "/.travis.yml",
]

[badges]
travis-ci = {repository = "rsimmonsjr/axiom" }
is-it-maintained-issue-resolution = {repository = "rsimmonsjr/axiom" }
is-it-maintained-open-issues  = {repository = "rsimmonsjr/axiom" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
env_logger = "^0.6.2"
serde_json = "^1.0.40"

num_cpus = "1.10.1"
im = {version = "13", features = ["serde"]}

[dependencies]
secc = { git = "https://github.com/rsimmonsjr/secc", branch="my_option_test"}
uuid = { version = "^0.7.4", features = ["serde", "v4"]}
log ="^0.4"
serde =  { version = "^1.0.97", features = ["derive", "rc"] }
bincode = "^1.1.4"
once_cell = "^0.2.6"

